Bug 1948417: Delegate CancelRequests call to mock content analysis service in tests r=dlp-reviewers,gstoll

This also checks that it is called in the clipboard test.  (Other tests could
be made to check this as well.  This is future work.)

Differential Revision: https://phabricator.services.mozilla.com/D238683